# MishMesh

./: AUTHORS  CMakeLists.txt  ChangeLog.txt  Doxyfile.in  LICENSE  README.md
include/MishMesh/: BBox.h  OBJ.h  PolyMesh.h  TriMesh.h  VTK.h  cone_singularities.h  dijkstra.h  dual_contouring.h  geodesics.h  laplace.h  macros.h  minimum_spanning_tree.h  poisson_disk_sampling.h  properties.h  refine.h  sampling.h  search.h  simplification.h  smoothing.h  split.h  transformations.h  utils.h  uvs.h  visualization.h
include/MishMesh/OpenMesh/: DoublePrecisionTraits.h
libs/libacc/: CMakeLists.txt  LICENSE.txt  README.md
libs/libacc/acc/: bvh_tree.h  kd_tree.h  primitives.h  traits.h
src/: OBJ.cpp  VTK.cpp  cone_singularities.cpp  cone_singularities_impl.h  dijkstra.cpp  geodesics.cpp  heatGeodesics.cpp  laplace.cpp  minimum_spanning_tree.cpp  poisson_disk_sampling.cpp  refine.cpp  sampling.cpp  search.cpp  simplification.cpp  smoothing.cpp  split.cpp  transformations.cpp  utils.cpp  uvs.cpp  visualization.cpp
src/meshing/: dual_contouring.cpp  grid.hpp  vertexfit.hpp
src/programs/: cone_cuts.cpp  cone_singularities.cpp  diffusion.cpp  dualsphere.hpp  geodesic_distances.cpp  grid.cpp  icosphere.cpp  mesh_smoother.cpp  meshing_test.cpp  offset_mesh.cpp  sampling_test.cpp  split_connected_components.cpp  test_flatness.cpp  uvsphere.cpp
